--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,55 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/background_gray"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/app_name"
+        android:fontFamily="Arial"
+        android:textColor="#FFFFFF"
+        android:id="@+id/MainActivityTitle"
         android:layout_alignParentTop="true"
-        android:id="@+id/tv_hello_world"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_marginTop="47dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center" />
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_text"
-        android:onClick="FunctionOne"
-        android:id="@+id/btn_hello_world"
-        android:layout_below="@+id/tv_hello_world"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp" />
+        android:id="@+id/ib_sign_up"
+        android:src="@drawable/icon_star"
+        android:background="@android:color/transparent"
+        android:onClick="switchToSignUpActivity"
+        android:layout_marginTop="42dp"
+        android:layout_below="@+id/MainActivityTitle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <Button
+
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set date"
-        android:id="@+id/button"
-        android:layout_below="@+id/btn_hello_world"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="78dp"
-        android:onClick="ShowDatePickerDialog"
-        />
+        android:id="@+id/ib_my_clubs"
+        android:src="@drawable/icon_double_hex"
+        android:background="@android:color/transparent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_text"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="78dp"
-        android:onClick="ShowUnboxingDialog"/>
+        android:id="@+id/ib_grab_beers"
+        android:src="@drawable/icon_stuff"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="48dp"
+        android:layout_below="@+id/ib_my_clubs"
+        android:onClick="LaunchBeerActivity"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Sign up"
+        android:textColor="#FFFFFF"
+        android:id="@+id/tv_sign_up"
+        android:layout_marginBottom="18dp"
+        android:layout_alignBottom="@+id/ib_sign_up"
+        android:layout_alignLeft="@+id/tv_my_clubs"
+        android:layout_alignStart="@+id/tv_my_clubs" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Beers !"
+        android:textColor="#FFFFFF"
+        android:id="@+id/tv_beers"
+        android:layout_alignTop="@+id/ib_grab_beers"
+        android:layout_alignLeft="@+id/tv_sign_up"
+        android:layout_alignStart="@+id/tv_sign_up"
+        android:layout_marginTop="19dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="My clubs"
+        android:textColor="#FFFFFF"
+        android:id="@+id/tv_my_clubs"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/ib_my_clubs"
+        android:layout_toEndOf="@+id/ib_my_clubs" />
+
 
 </RelativeLayout>
