--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
+
+    >
+    <item android:id="@+id/btn_square_actbar"
+          android:title="Theme"
+            android:icon="@drawable/actionbarstff"
+            app:showAsAction="ifRoom"
+        />
+
+
+    <item android:title="Toast me"
+          android:id="@+id/toast_me"
+          android:visible="true"
+          />
+    <item android:id="@+id/action_se1ttings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
