--- a/app/src/main/res/layout/content_beer_list.xml
+++ b/app/src/main/res/layout/content_beer_list.xml
@@ -32,7 +32,8 @@
         android:layout_marginTop="27dp"
         android:layout_below="@+id/bt_dl_beer_list"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="LookUpList"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
