--- a/app/src/main/res/layout/activity_beers_with_recycler.xml
+++ b/app/src/main/res/layout/activity_beers_with_recycler.xml
@@ -11,6 +11,6 @@
         android:id="@+id/rv_biere"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
