--- a/app/src/main/res/layout/rv_beer_element.xml
+++ b/app/src/main/res/layout/rv_beer_element.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
 
@@ -9,7 +10,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
-        android:id="@+id/rv_beer_element_name"
+        android:id="@+id/rv_beer_element"
         android:layout_weight="0.12"
         android:gravity="center" />
 </LinearLayout>
