--- a/app/src/main/res/layout/activity_beers_with_recycler.xml
+++ b/app/src/main/res/layout/activity_beers_with_recycler.xml
@@ -5,6 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/background_gray"
     tools:context="org.esiea.pelete_bliss_debuiche_gauthier.hiddenpandora.BeersWithRecycler">
 
     <android.support.v7.widget.RecyclerView
