--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
@@ -9,97 +9,122 @@
     android:paddingTop="0dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/background_gray"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:padding="30dp">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:text="@string/app_name"
-        android:fontFamily="Arial"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
         android:textColor="#FFFFFF"
         android:id="@+id/MainActivityTitle"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="47dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="center" />
+        android:fontFamily="Arial"/>
+</LinearLayout>
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:weightSum="4">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_sign_up"
-        android:src="@drawable/icon_star"
-        android:background="@android:color/transparent"
-        android:onClick="switchToSignUpActivity"
-        android:layout_marginTop="42dp"
-        android:layout_below="@+id/MainActivityTitle"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ib_sign_up"
+            android:src="@drawable/icon_star"
+            android:background="@android:color/transparent"
+            android:onClick="switchToSignUpActivity"
+            android:layout_marginTop="22dp"
+            />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_my_clubs"
-        android:src="@drawable/icon_double_hex"
-        android:background="@android:color/transparent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/sign_up"
+            android:textColor="#FFFFFF"
+            android:id="@+id/tv_sign_up"
+            android:layout_marginTop="45dp"
+            android:layout_marginLeft="20dp"
+            />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_grab_beers"
-        android:src="@drawable/icon_stuff"
-        android:background="@android:color/transparent"
-        android:layout_marginTop="48dp"
-        android:layout_below="@+id/ib_my_clubs"
-        android:onClick="LaunchBeerActivity"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Sign up"
-        android:textColor="#FFFFFF"
-        android:id="@+id/tv_sign_up"
-        android:layout_marginBottom="18dp"
-        android:layout_alignBottom="@+id/ib_sign_up"
-        android:layout_alignLeft="@+id/tv_my_clubs"
-        android:layout_alignStart="@+id/tv_my_clubs" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Beers !"
-        android:textColor="#FFFFFF"
-        android:id="@+id/tv_beers"
-        android:layout_alignTop="@+id/ib_grab_beers"
-        android:layout_alignLeft="@+id/tv_sign_up"
-        android:layout_alignStart="@+id/tv_sign_up"
-        android:layout_marginTop="19dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="My clubs"
-        android:textColor="#FFFFFF"
-        android:id="@+id/tv_my_clubs"
-        android:layout_marginLeft="19dp"
-        android:layout_marginStart="19dp"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/ib_my_clubs"
-        android:layout_toEndOf="@+id/ib_my_clubs" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ib_my_clubs"
+            android:src="@drawable/icon_double_hex"
+            android:background="@android:color/transparent"
+            android:layout_marginTop="22dp"
+            android:onClick="LaunchClubInfo"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/clubs"
+            android:textColor="#FFFFFF"
+            android:id="@+id/tv_my_clubs"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="45dp"/>
 
 
-</RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ib_grab_beers"
+            android:src="@drawable/icon_stuff"
+            android:background="@android:color/transparent"
+            android:layout_marginTop="22dp"
+            android:onClick="LaunchBeerActivity"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/beers"
+            android:textColor="#FFFFFF"
+            android:id="@+id/tv_beers"
+            android:layout_marginTop="45dp"
+            android:layout_marginLeft="20dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+    </LinearLayout>
+</LinearLayout>
+
+
+
+
+
+</LinearLayout>
