--- a/app/src/main/res/layout/rv_beer_element.xml
+++ b/app/src/main/res/layout/rv_beer_element.xml
@@ -12,5 +12,6 @@
         android:text="Medium Text"
         android:id="@+id/rv_beer_element"
         android:layout_weight="0.12"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textColor="#FFFFFF"/>
 </LinearLayout>
